<resources>
    <string name="app_name">Burtsev-v-26</string>
    <string name="_20_00">20:00</string>
    <string name="_hello">Привет!</string>
    <string name="ell1">TODO</string>
    <string name="text">Для входа введите кодовый рисунок</string>
    <string name="arrow">TODO</string>
    <string name="photo">TODO</string>
    <string name="contacts">Контакты</string>
    <string name="leftArrow">TODO</string>
    <string name="rightArrrow">TODO</string>
    <string name="_61">Искать в 61 контакте</string>
    <string name="anya">TODO</string>
    <string name="alba">TODO</string>
    <string name="avatar">TODO</string>
    <string name="boris">TODO</string>
    <string name="txtanya">Аня</string>
    <string name="txtalbina">Альбина</string>
    <string name="txtAnton">Антон</string>
    <string name="txtGrandmom">Бабушка</string>
    <string name="txtBoris">Борис</string>
    <string name="color">color</string>
    <string name="line">TODO</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_sape">#</string>
    <string name="_0">0</string>
    <string name="_star">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="menu">TODO</string>
    <string name="ellipse">TODO</string>
    <string name="phone">TODO</string>
    <string name="todo">TODO</string>
</resources>